html & sass header

--- a/index.html
+++ b/index.html
@@ -11,6 +11,15 @@
     <title>Rave Festival</title>
 </head>
 <body>
-    <h1>SASS</h1>
+    <header class="header">
+        <div class="contenedor contenido-header">
+            <h1>Rave & EDM Festival</h1>
+            <nav class="navegacion-principal">
+                <a href="#">Lineup</a>
+                <a href="#">Galería</a>
+                <a href="#">Boletos</a>
+            </nav>
+        </div>
+    </header>
 </body>
 </html>
