--- a/index.html
+++ b/index.html
@@ -21,5 +21,19 @@
             </nav>
         </div>
     </header>
+
+    <div class="video">
+        <div class="overlay">
+            <div class="contenedor contenido-video">
+                <h2>Rave & EDM Festival</h2>
+                <p>Octubre 2024, Puerto Vallarta, México</p>
+            </div>
+        </div>
+        <video autoplay muted loop>
+            <source src="src/video/dj.mp4" type="video/mp4">
+            <source src="src/video/dj.ogv" type="video/ogg">
+            <source src="src/video/dj.webm" type="video/dj.webm">
+        </video>
+    </div>
 </body>
 </html>
