sass to the festival section

--- a/index.html
+++ b/index.html
@@ -36,14 +36,14 @@
         </video>
     </div>
 
-    <section>
+    <section class="sobre-festival">
         <div class="imagen">
             <img src="src/img/imagen_dj.jpg" alt="sobre el festival">
         </div>
         <div class="contenido-festival">
             <h2>Rave & EDM Festival</h2>
-            <p>Octubre 2024, Puerto Vallarta, México</p>
-            <p>El Rave & EDM Festival se llevará a cabo en octubre de 2024 en la vibrante ciudad de Puerto Vallarta, México. Este emocionante evento promete ser una experiencia inolvidable para los amantes de la música electrónica, con una alineación impresionante de DJs de renombre internacional, luces espectaculares y un ambiente electrizante junto a las hermosas playas del Pacífico. ¡Prepárate para bailar toda la noche y disfrutar de un festival lleno de energía y emoción en un destino paradisíaco!</p>
+            <p class="fecha">Octubre 2024, Puerto Vallarta, México</p>
+            <p>El Rave & EDM Festival se llevará a cabo en la vibrante ciudad de Puerto Vallarta, México. Este emocionante evento promete ser una experiencia inolvidable junto a las hermosas playas del Pacífico. ¡Prepárate para bailar toda la noche y disfrutar de un festival lleno de energía!</p>
         </div>
     </section>
 </body>
