adding the footer and a map for the stylesheet

--- a/index.html
+++ b/index.html
@@ -197,5 +197,11 @@
             </div>
         </div>
     </section>
+
+    <footer class="footer">
+        <p>
+            Rave & EDM Festival. Todos los derechos reservados.
+        </p>
+    </footer>
 </body>
 </html>
