--- a/index.html
+++ b/index.html
@@ -203,5 +203,7 @@
             Rave & EDM Festival. Todos los derechos reservados.
         </p>
     </footer>
+
+    <script src="src/js/app.js"></script>
 </body>
 </html>
