adding the gallery with js

--- a/index.html
+++ b/index.html
@@ -158,6 +158,15 @@
         </div> <!--.escenarios-contenedor -->
     </section>
 
+    <section>
+        <div id="galeria" class="galeria">
+            <h3>Galería</h3>
+
+            <ul class="galeria-imagenes">
+            </ul>
+        </div>
+    </section>
+
     <section id="boletos" class="contenedor-boletos">
         <h3>Boletos</h3>
     
