adding styles to the gallery with sass

--- a/index.html
+++ b/index.html
@@ -162,8 +162,8 @@
         <div id="galeria" class="galeria">
             <h3>Galería</h3>
 
-            <ul class="galeria-imagenes">
-            </ul>
+            <div class="galeria-imagenes">
+            </div>
         </div>
     </section>
 
